# expense-tracker-mcp

./: .gitignore  README.md  pyproject.toml  test_models.py
src/expense_server/: server.py
src/expense_server/database/: connection.py  models.py
src/expense_server/utils/: currency.py  validators.py
